# Algorithms

./: .gitignore
10.04.2025/: CmakeLists.txt  database.cpp  polyline.cpp
13.03.2025/: merge_two_sorted.cpp  remove_duplicates.cpp  trapping_rain_water.cpp
17.04.2025/: CMakeLists.txt  coeval.cpp  count_of_inversions.cpp  first_k_elems.cpp
27.02.2025/: CMakeLists.txt  first.cpp  third.cpp
27.03.2025/: CMakeLists.txt  heap.cpp  heap.h  quick_sum.cpp  sliding_max.cpp
2_sem/: .gitignore
2_sem/10.04.2025/: CmakeLists.txt  sort.cpp
2_sem/10_seminar/: main.cpp
2_sem/11_seminar/: CMakeLists.txt  main.cpp
2_sem/13.03.2025/: CMakeLists.txt  largest_rectangle.cpp  merge_two_sorted.cpp  remove_duplicates.cpp  simplify_path.cpp
2_sem/17.04.2025/: count_of_inversions.cpp  first_k_elems.cpp
2_sem/27.02.2025/: CMakeLists.txt  fourth.cpp  second.cpp
2_sem/27.03.2025/: dead_ends.cpp  heap.h  quick_sum.cpp
2_sem/3_seminar/classwork/: main.cpp
2_sem/4_seminar/: CmakeLists.txt  main.cpp
2_sem/5 seminar/: main.cpp
2_sem/6_seminar/: main.cpp
2_sem/8_seminar/: main.cpp
2_sem/9_seminar/: main.cpp  second.cpp
2_sem/contest/: CMakeLists.txt  first.cpp  second.cpp  third.cpp  trapping_rain_water.cpp
2_sem/contest 2/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp
2_seminar/homework/: main.cpp
3_sem/: CMakeLists.txt  теоретическая.docx
3_sem/1_seminar/: main.cpp
3_sem/2_seminar/: main.cpp
3_sem/3_seminar/: main.cpp
3_sem/calcGraph/: main.cpp
3_sem/contests/: task1.cpp
3_sem/hw_09_12_2025/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
3_sem/hw_28_10_2025/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
3_sem/puzzle/: graph.h  puzzle.cpp
